# Snapshift

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.worker  docker-entrypoint-worker.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e294c00c8bf7_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  captures.py  deps.py  replay.py  tags.py  urls.py  ws.py
backend/app/models/: __init__.py  capture.py  job.py  tag.py  url.py
backend/app/schemas/: capture.py  job.py  tag.py  url.py
backend/app/services/: browsertrix.py  capture_orchestrator.py  notifier.py  retention.py  scheduler.py  storage.py  thumbnail.py  ws_manager.py
backend/app/worker/: cli.py  runner.py
backend/behaviors/: force-load-lazy.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/captures/: ArchiveViewer.vue
frontend/src/components/layout/: AppLayout.vue  AppSidebar.vue
frontend/src/components/tags/: TagBadge.vue
frontend/src/components/urls/: UrlForm.vue
frontend/src/lib/: api.ts  ws.ts
frontend/src/router/: index.ts
frontend/src/stores/: captures.ts  jobs.ts  tags.ts  urls.ts
frontend/src/types/: index.ts
frontend/src/views/: DashboardView.vue  SettingsView.vue  UrlDetailView.vue  UrlListView.vue
